Feature/134 users/me (#168)
* Refactor authentication process: replace LoginFilter with JwtTokenUtil for JWT handling and update AuthorizeFilter to use new utility. Enhance LoginController to generate and return JWT on successful login.

* feat: implement global authentication exception handling and update user info endpoint

* feat: extend API specification to include user info endpoint and error response handling

* refactor: simplify global authentication exception handler by removing specific status response
