# openapi/openapi.yaml
@@ -23,6 +23,12 @@ paths:
           type: integer
           format: int32
       responses:
+        default:
+          description: exception
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
         "200":
           description: 取得成功
           content:
@@ -56,6 +62,12 @@ paths:
               $ref: "#/components/schemas/DiaryRequest"
         required: true
       responses:
+        default:
+          description: exception
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
         "200":
           description: 更新成功
           content:
@@ -83,6 +95,12 @@ paths:
           type: integer
           format: int32
       responses:
+        default:
+          description: exception
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
         "204":
           description: 削除成功（レスポンスボディなし）
         "404":
@@ -101,8 +119,18 @@ paths:
               $ref: "#/components/schemas/LoginRequest"
         required: true
       responses:
+        default:
+          description: exception
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
         "200":
           description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/LoginResponse"
   /diaries:
     get:
       tags:
@@ -111,6 +139,12 @@ paths:
       description: ユーザーに紐づく日記の一覧を返す
       operationId: diariesGet
       responses:
+        default:
+          description: exception
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
         "200":
           description: 一覧取得成功
           content:
@@ -133,6 +167,12 @@ paths:
               $ref: "#/components/schemas/DiaryRequest"
         required: true
       responses:
+        default:
+          description: exception
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
         "201":
           description: 作成成功
           content:
@@ -153,6 +193,12 @@ paths:
         schema:
           type: string
       responses:
+        default:
+          description: exception
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
         "200":
           description: OK
           content:
@@ -169,18 +215,48 @@ paths:
             schema:
               type: string
       responses:
+        default:
+          description: exception
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
         "200":
           description: OK
           content:
             '*/*':
               schema:
                 type: string
+  /users/me:
+    get:
+      tags:
+      - login-controller
+      operationId: userInfo
+      responses:
+        default:
+          description: exception
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/UsersResponse"
   /:
     get:
       tags:
       - api-controller
       operationId: Hello
       responses:
+        default:
+          description: exception
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
         "200":
           description: OK
           content:
@@ -189,6 +265,12 @@ paths:
                 type: string
 components:
   schemas:
+    ErrorResponse:
+      type: object
+      description: エラー時のレスポンス
+      properties:
+        message:
+          type: string
     DiaryResponse:
       type: object
       properties:
@@ -235,6 +317,23 @@ components:
           type: string
         password:
           type: string
+    LoginResponse:
+      type: object
+      properties:
+        token:
+          type: string
+        user:
+          $ref: "#/components/schemas/UsersResponse"
+    UsersResponse:
+      type: object
+      properties:
+        username:
+          type: string
+        nickname:
+          type: string
+        id:
+          type: integer
+          format: int64
     DiarySummary:
       type: object
       properties:
